<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/textViewTrains"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trains" />

    <GridView
        android:id="@+id/gridViewTrains"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="4" />

    <TextView
        android:id="@+id/textViewContractsCompleted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contracts_completed" />

    <GridView
        android:id="@+id/gridViewContractsCompleted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="6" />

    <TextView
        android:id="@+id/textViewBonuses"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bonuses" />

    <GridView
        android:id="@+id/gridViewBonuses"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="2" />

    <TextView
        android:id="@+id/textViewContractsMissed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contracts_missed" />

    <GridView
        android:id="@+id/gridViewContractsMissed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="6" />

</merge>